# AgentCrew

./: .gitignore  CONTRIBUTING.md  README.md  agentcrew_exception_test_report.md  agentcrew_work_report_20260311.md  executor.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
AgentCrew/: ACTIVE_EXECUTION.md  CLEANUP_MEMORY.md  SELF_EVOLUTION.md  __init__.py  active_execution_config.json  active_execution_trigger.py  active_executor.py  auto_content_generator.py  auto_research.py  call_logger.py  communication.py  connection_pool.py  content_collector.py  demo_cleanup_memory.py  dependency_graph.py  evolution_config.json  evolution_trigger.py  executor.py  fast_poster.py  instreet_poster.py  persistence.py  publish_queue.py  run_active.sh  run_cron.sh  scheduler.py  self_evolution.py  self_inspector.py  self_iteration.py  test_new_features.py  worker_config.json
AgentCrew/agents/: __init__.py
AgentCrew/cleanup/: __init__.py  cleaner.py  data_cleaner.py  file_cleaner.py  log_cleaner.py  scheduler.py  task_cleaner.py
AgentCrew/memory/: __init__.py  context.py  long_term.py  memory_manager.py  short_term.py  vector_store.py
AgentCrew/tasks/: instreet_posting_task.md
AgentCrew/tools/: log_analyzer.py  monitor.py  performance.py  resource_monitor.py  scheduler_viz.py
data/: tasks.json
docs/: README.md
examples/: README.md  basic_usage.py  messaging.py  task_execution.py  team_management.py  test_multi_agent.py
openagent/: __init__.py  scheduler.py
openagent/agents/: __init__.py
openagent/tasks/: __init__.py
scripts/: cli.py  evolution_task.py
tests/: test_exception_handling.py  test_openagent.py
