[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AgentCrew"
version = "0.1.0"
description = "🤖 Multi-Agent Collaboration Framework with AI-powered task decomposition, parallel execution, and intelligent team coordination"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "stlin256", email = "yjzlxljy@outlook.com"}
]
keywords = ["ai", "agent", "multi-agent", "collaboration", "task-execution", "gpt", "llm", "openai", "autonomous-agents", "agent-framework", "crewai-alternative", "task-automation", "team-collaboration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Artificial Intelligence :: Agents",
    "Intended Audience :: Information Technology",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/none-ai/AgentCrew"
Repository = "https://github.com/none-ai/AgentCrew"
Issues = "https://github.com/none-ai/AgentCrew/issues"

[project.scripts]
AgentCrew = "AgentCrew.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["AgentCrew*"]

[tool.setuptools.package-data]
AgentCrew = ["py.typed"]
